<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="treehou.se.habit.ui.settings.subsettings.wiget.WidgetSettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView7" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_margin">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/widget_holder"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin"
            style="?attr/card_style">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="@dimen/default_item_padding">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hdr_text"
                    android:id="@+id/hdr_text"
                    style="@style/MenuItemText"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hdr_text_size"
                    android:id="@+id/hdr_text_size"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bar_text_size"
                    android:max="150"
                    android:indeterminate="false" />
            </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin"
                style="?attr/card_style">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="@dimen/default_item_padding">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hdr_image"
                        android:id="@+id/hdr_image"
                        style="@style/MenuItemText"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hdr_background"
                        android:id="@+id/hdr_image_background"/>

                    <CheckBox
                        android:text="@string/enable_icon_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cbx_enable_image_background" />

                    <LinearLayout
                        android:id="@+id/lou_icon_backgrounds"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            android:layout_weight="1">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/image_background"
                                android:layout_weight="1">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:padding="@dimen/short_space"
                                    android:id="@+id/img_widget_icon1"
                                    android:src="@drawable/ic_item_settings_widget"/>
                            </FrameLayout>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/image_background"
                                android:visibility="visible"
                                android:layout_weight="1">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:padding="@dimen/short_space"
                                    android:id="@+id/img_widget_icon2"
                                    android:src="@drawable/ic_item_settings_widget"/>
                            </FrameLayout>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/image_background"
                                android:layout_weight="1">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:padding="@dimen/short_space"
                                    android:id="@+id/img_widget_icon3"
                                    android:src="@drawable/ic_item_settings_widget"/>
                            </FrameLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            android:layout_weight="1">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/image_background"
                                android:layout_weight="1">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:padding="@dimen/short_space"
                                    android:id="@+id/img_widget_icon4"
                                    android:src="@drawable/ic_item_settings_widget"/>
                            </FrameLayout>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/image_background"
                                android:visibility="visible"
                                android:layout_weight="1">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:padding="@dimen/short_space"
                                    android:id="@+id/img_widget_icon5"
                                    android:src="@drawable/ic_item_settings_widget" />
                            </FrameLayout>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/image_background"
                                android:layout_weight="1">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:padding="@dimen/short_space"
                                    android:id="@+id/img_widget_icon6"
                                    android:src="@drawable/ic_item_settings_widget"/>
                            </FrameLayout>
                        </LinearLayout>
                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hdr_text_size"/>

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bar_image_size"
                        android:max="150"
                        android:indeterminate="false" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin"
                style="?attr/card_style">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="@dimen/default_item_padding">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button"
                        style="@style/MenuItemText"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/compressed"
                            android:layout_weight="1"/>

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/swt_compressed_button" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin"
                style="?attr/card_style">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="@dimen/default_item_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/slider"
                        style="@style/MenuItemText"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/compressed"
                            android:layout_weight="1"/>

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/swt_compressed_slider"/>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
