...
    <string name="server_name">Server Name</string>
    <string name="save">Save</string>
    <string name="color">Color</string>
    <string name="item_type">Item Type</string>
    <string name="command">Command</string>
    <string name="image">Image</string>
    <string name="settings_widgets">Widgets</string>
    <string name="settings_general">General</string>
    <string name="settings_widget">Widget</string>
    <string name="loading">Loading</string>
    <string name="title_activity_slider">Slider</string>
    <string name="max">Max</string>
    <string name="cancel">Cancel</string>
...
