<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <ImageButton
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:id="@+id/btn_up"
        app:srcCompat="@drawable/cell_up_action"
        android:background="?android:attr/selectableItemBackground"
        android:layout_weight="1" />

    <ImageButton
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:id="@+id/btn_cancel"
        app:srcCompat="@drawable/cell_cancel_icon"
        android:background="?android:attr/selectableItemBackground"
        android:layout_weight="1" />

    <ImageButton
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:id="@+id/btn_down"
        app:srcCompat="@drawable/cell_down_action"
        android:background="?android:attr/selectableItemBackground"
        android:layout_weight="1" />

</LinearLayout>